[RED] added testing for balance service